Update and rename register.html to index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navToggle">
                 <div class="navbar-nav font-weight-bold mx-2 nav-fill">
-                  <a class="nav-item nav-link navfontChange sizeChangeBig mx-2" href="index.html">Home</a>
+                  <a class="nav-item nav-link navfontChange sizeChangeBig mx-2" href="#">Home</a>
                   <a class="nav-item nav-link navfontChange sizeChangeBig mx-2" href="#">About Us</a>
                   <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle navfontChange sizeChangeBig mx-2" role="button" id="navDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Dropdown</a>
