--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <a class="dropdown-item dropPersonal" href="#">Forgot password?</a>
               </div>
             </div>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control-sm mr-sm-2" type="search" placeholder="Search this website..." aria-label="Search">
-              <button class="btn btn-outline-light my-2 mx-2 my-sm-0 btn-sm" type="submit">Search</button>
-            </form>
-        </div>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control-sm mr-sm-2" type="search" placeholder="Search this website..." aria-label="Search">
+            <button class="btn btn-outline-light my-2 mx-2 my-sm-0 btn-sm" type="submit">Search</button>
+          </form>
+        </div>   
       </nav>
       <!------Navigation Bar-------->
       <div class="navbg navContain">
@@ -96,7 +96,7 @@
                   <li>Must contain atleast One Uppercase letter</li>
                   <li>Must contain atleast One Lowercase letter</li>
                   <li>Must contain atleast One Numeric Character</li>
-                  <li>Must contain atleast One Special Character: #!_-?$&% (@ not accepted)</li>
+                  <li>Must contain atleast One Special Character: #!_-?$&%@</li>
                   <li>Must contain between 8 & 16 characters</li>
                 </ul>
               </div>
@@ -366,9 +366,10 @@
         </div>
       </div>
     
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="formScript.js"></script>	
+    <script src="formScript.js"></script>    
   </body>
 </html>
