--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                 <option value="26">26</option>
                 <option value="27">27</option>
                 <option value="28">28</option>
-                <option value="29">29</option>
-                <option value="30">30</option>
-                <option value="31">31</option>
+                <option value="29" class="febMod">29</option>
+                <option value="30" class="febMod febLeap">30</option>
+                <option value="31" class="febMod febLeap standardD">31</option>
               </select>
             </div>
             <div id="dobY">
