--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             <div id="dobM">
               <label class="mr-sm-2 formLabel" for="month_Birth">Month</label>
               <select class="custom-select mx-sm-0" id="month_Birth">
-                <option value="1" selected>01 - January</option>
+                <option value="" disabled selected>Please Choose</option>
+                <option value="1">01 - January</option>
                 <option value="2">02 - February</option>
                 <option value="3">03 - March</option>
                 <option value="4">04 - April</option>
@@ -174,7 +175,8 @@
             <div id="dobY">
               <label class="mr-sm-2 formLabel" for="year_Birth">Year</label>
               <select class="custom-select mx-sm-0" id="year_Birth">
-                <option value="1960" selected>1960</option>
+                <option value="" disabled selected>Please Choose</option>
+                <option value="1960">1960</option>
                 <option value="1961">1961</option>
                 <option value="1962">1962</option>
                 <option value="1963">1963</option>
