--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                 <option value="11">11 - November</option>
                 <option value="12">12 - December</option>
               </select>
+              <div class="fValidate" id="monthError">Please select your Month of Birth!</div>
             </div>
             <div id="dobD">
               <label class="mr-sm-2 formLabel" for="day_Birth">Day</label>
@@ -235,6 +236,7 @@
                 <option value="2016">2016</option>
                 <option value="2017">2017</option>
               </select>
+              <div class="fValidate" id="yearError">Please select your Year of Birth!</div>
             </div>
             <div id="security">
               <label class="mr-sm-2 formLabel" for="secuity_ques">Secuity Question</label>
