--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div id="termCondCheck">
               <input type="checkbox" class="form-check-input" name="tandcAgree" id="tandcBox" required>
               <label class="formLabel" for="tandcBox">I agree to the <a href="#" id="formLink">Terms and Conditions</a></label>
-              <div class="fValidate" id="tandcValid">You must agree to Terms and Conditions!</div>
+              <div class="fValidate" id="tandcValid">You must agree to the Terms and Conditions!</div>
             </div>
             <input type="submit" class="btn btn-light btn-lg" id="submit">
           </form>
